--- a/analysis-4.tex
+++ b/analysis-4.tex
@@ -858,7 +858,7 @@ We notice the following properties of the area:
 	where $A$ is the $k\cross k$ matrix representing the differential $Df(x): T_x M \to T_{f(x)} N$.
 \end{definition}
 
-\begin{proposition}{}{}
+\begin{proposition}{}{jacobian-sqrt-det}
 	Consider the differential as a map to $R^s$: $Df(x): T_x M \to \R^s$.
 	Let $\{v_1, \dots, v_k\}$ be an orthonormal basis of $T_x M$ and consider
 	\begin{equation}
@@ -898,12 +898,12 @@ We notice the following properties of the area:
 
 	If $f$ is injective then
 	\begin{equation}
-		\int_{f(S)} h(y) \dd \mathcal H^k(y) = \int_S h \circ f(x) J_f(x) \dd \mathcal H^k(x)
+		\int_{f(S)} h(y) \dd \mathcal H^k(y) = \int_S (h \circ f)(x) J_f(x) \dd \mathcal H^k(x)
 	\end{equation}
 
 	If $f$ is not injective then
 	\begin{equation}
-		\int_{f(S)} h(y) \cdot \nu(y) \dd \mathcal H^k(y) = \int_S h \circ f(x) J_f(x) \dd \mathcal H^k(x)
+		\int_{f(S)} h(y) \cdot \nu(y) \dd \mathcal H^k(y) = \int_S (h \circ f)(x) J_f(x) \dd \mathcal H^k(x)
 	\end{equation}
 	where $\nu(y) = \# \{ x \in S : f(x) = y\}$
 \end{theorem}
@@ -911,5 +911,199 @@ We notice the following properties of the area:
 \begin{proof}
 	TODO: lec 14
 \end{proof}
+
+\begin{corollary}{}{}
+	If $h = 1$ and we have
+	\begin{equation}
+		\mathcal H^k(f(S)) = \int_S J_f(x) \dd \mathcal H^k(x)
+	\end{equation}
+	for $f$ injective
+\end{corollary}
+
+\begin{remark}{}{jacobian-on-differentials}
+	If $\{v_1, \dots, v_k\}$ is an orthonormal basis of $T_xM$ and $Df(x)[v_1], \dots, Df(x)[v_k]$ are
+	orthogonal to each other, then
+	\begin{equation}
+		J_f(x) = \abs{Df(x)[v_1]} \dots \abs{Df(x)[v_k]}
+	\end{equation}
+\end{remark}
+
+\begin{proof}
+	Let $w_i = \frac{Df(x)[v_i]}{\abs{Df(x)[v_i]}}$.
+	Then
+	\begin{equation}
+		A = \begin{pmatrix}
+			\abs{Df(x)[v_1]} &        & 0                \\
+			                 & \ddots &                  \\
+			0                &        & \abs{Df(x)[v_k]}
+		\end{pmatrix}
+	\end{equation}
+	TODO: what
+\end{proof}
+
+\begin{example}{Surface of revolution}{}
+	Let $g: I \to (0, +\infty)$ of class $C^1$ where $I$ is an open interval on $\R$.
+	In $\R^3$, consider the manifold
+	\begin{equation}
+		N = \{ (x,y,z) \in \R^3 \mid x \in I, \abs{(y, z)} = g(x) \}
+	\end{equation}
+
+	Compute the area.
+\end{example}
+
+\begin{proof}[Solution]
+	First we want to find a parametrization of $N$.
+	We choose the parametrization $f: I \cross (0, 2 \pi) \to N$ defined as
+	\begin{equation}
+		f(s, \theta) = (s, g(s) \cos \theta, g(s) \sin \theta)
+	\end{equation}
+
+	We notice that $f$ is indeed injective and almost surjective, as it misses the line where
+	$\theta = 0$. The image of $f$ is
+	\begin{equation}
+		f(I \cross (0, 2\pi) =
+		N \setminus \underbrace{\{ (s, g(s), 0) \mid s \in I \}}_{\mathcal H^2(\cdot) = 0}
+	\end{equation}
+	but since a line has area zero when $k = 2$ we have that
+	\begin{equation}
+		\mathcal H^2(N) = \mathcal H^2(f(I \cross (0, 2\pi))
+	\end{equation}
+
+	We can now use the area formula:
+	\begin{align}
+		\mathcal H^2(f(I \cross (0, 2\pi))) & = \int_{I \cross (0, 2\pi)} J_f(s, \theta) \dd \mathcal
+		H^2(s, \theta)                                                                                    \\
+		                                    & = \int_{I \cross (0, 2\pi)} J_f(s, \theta) \dd s \dd \theta
+	\end{align}
+	where we can change the differential since ??? like the thing is open and they have the same
+	lebesgue measure?
+
+	Now we need to find the jacobian: we have that the tangent plane to $I \cross (0, 2\pi)$ is
+	$T_{(s, \theta)}(I\cross (0,2\pi)) = \R^2$, therefore we can take the canonical basis
+	$\{ e_1, e_2 \}$ as our orthonormal basis.
+
+	Now either we find an orthonormal basis of $T_{f(s, \theta)} N$ or we use
+	\cref{prop:jacobian-sqrt-det}. However in this case we are lucky since we will be able to apply
+	\cref{rk:jacobian-on-differentials}:
+	\begin{align}
+		Df(s, \theta)[e_1] = \pdv{f}{s}{}(s, \theta)      & = (1, g'(s) \cos \theta, g'(s) \sin \theta) \\
+		Df(s, \theta)[e_2] = \pdv{f}{\theta}{}(s, \theta) & = (0, -g(s) \sin \theta, g(s) \cos \theta)
+	\end{align}
+	which are orthogonal.
+
+	Then the jacobian is
+	\begin{align}
+		J_s(s, \theta)           & = \abs{Df(s, \theta)[e_1]} \abs{Df(s, \theta)[e_2]}           \\
+		                         & = \sqrt{1+g'(s)^2} g(s)                                       \\
+		\implies \mathcal H^2(N) & = \int_0^{2\pi} \int_I \sqrt{1+g'(s)^2} g(s) \dd s \dd \theta \\
+		                         & = 2 \pi \int_I \sqrt{1+g'(s)^2} g(s) \dd s
+	\end{align}
+	since $\theta$ is not in the integrand.
+\end{proof}
+
+\begin{remark}{Cauchy-Binet formula}{cauchy-binet-formula}
+	\begin{equation}
+		\det(B^T B) = \sum_{C \ k\cross k \text{ minor of } B} \abs{\det (C)}^2
+	\end{equation}
+\end{remark}
+This is particularly useful if we choose to apply \cref{prop:jacobian-sqrt-det}.
+
+\begin{example}{Area of $n$ dimensional sphere}{}
+	Compute the area of any unit sphere $S^n$ inductively on $n$.
+\end{example}
+\begin{proof}[Solution]
+	Recall that $S^n \subseteq \R^{n+1}$.
+	We can parametrize most spheres $S^n$ by $(0, \pi)\cross S^{n-1}$
+	(assume $n \geq 2$), where we call our extra parameter $\theta \in (0, \pi)$.
+
+	Notice that the set of points in $S^n$ forming an angle $\theta$ with $e_{n+1}$ is a copy of the
+	$S^{n-1}$ sphere with radius $\sin \theta$.
+	Then we choose as our parametrization to be $f: (0, \pi) \cross S^{n-1} \to S^n$ defined as
+	\begin{equation}
+		f(\theta, x) = ((\sin \theta) x, \cos \theta)
+	\end{equation}
+	Note that $f$ excludes $\{\pm e_{n+1}\}$ but these points have no dimension so we are fine.
+
+	We have
+	\begin{equation}
+		\mathcal H^n(S^n) = \int_{(0, \pi) \cross S^{n-1}} J_f(\theta, x) \dd \mathcal H^n (\theta, x)
+	\end{equation}
+
+	Given $(\theta, x) \in (0, \pi) \cross S^{n-1}$ we select an orthonormal basis
+	$u_1, \dots, u_{n-1}$ of $T_x S^{n-1}$. Then, the tangent space of the product of two spaces is
+	the product of the tangent spaces and, since the tangent space of $(0, \pi)$ is $\R$, we get
+	\begin{equation}
+		T_{(\theta, x)}((0, \pi) \cross S^{n-1}) = \R \cross T_x S^{n-1}
+	\end{equation}
+	so that the vectors $(1, 0, \dots, 0), (0, u_1), \dots (0, u_{n-1})$ form an orthonormal basis
+	of $T_{(\theta, x)}$.
+
+	Let us compute the differentials:
+	\begin{align}
+		Df(\theta, x)[(1, 0, \dots, 0)] & = ((\cos \theta) x, -\sin \theta) \\
+		Df(\theta, x)[(0, u_j)]         & = ((\sin\theta) u_j, 0)
+	\end{align}
+	where we get the $u_j$ since we have to take into account the speed of the parametrization.
+
+	(Rigorous reason on why we have $u_j$). If we consider
+	$\gamma: (-\varepsilon, \varepsilon) \to (0, \pi) \cross S^{n-1}$ such that
+	$\gamma(0) = (\theta, x)$ and $\gamma = (\theta, \delta)$ where $\theta$ is constant and $\delta$
+	is another curve in $S^{n-1}$, in this way $\gamma' = (0, \delta')$, where $\delta'(0) = u_j$.
+	Then, the derivative of the composition is
+	\begin{align}
+		(f \circ \gamma)' (0) & = \eval{\dv{f}{t}{} (\theta, \delta(t))}_{t = 0}                    \\
+		                      & = \eval{\dv{f}{t}{} ((\sin \theta) \delta(t), \cos \theta)}_{t = 0} \\
+		                      & = ((\sin \theta) \delta'(0), 0)
+	\end{align}
+
+	We obtain that the differentials are orthogonal, hence we can write the jacobian using
+	\cref{rk:jacobian-on-differentials}:
+	\begin{align}
+		J_f(\theta, x) & = \abs{((\cos \theta) x, -\sin)} \cdot \abs{(\sin \theta)u_1, 0} \cdot \dots
+		\cdot \abs{(\sin \theta) u_{n-1}, 0}                                                          \\
+		               & = 1 \cdot \sin \theta \cdot \dots \cdot \sin \theta                          \\
+		               & = (\sin \theta)^{n-1}
+	\end{align}
+	and the area is computed as
+	\begin{align}
+		\mathcal H^n(S^n) & = \int_0^\pi (\sin \theta)^{n-1} \int_{S^{n-1}} \dd \mathcal H^{n-1}(x) \dd \theta \\
+		                  & = \mathcal H^{n-1}(S^{n-1}) \int_0^\pi (\sin \theta)^{n-1} \dd \theta
+	\end{align}
+
+	There is a smarter way to do this, which is in the lecture notes.
+\end{proof}
+
+\subsection{Orientation}
+
+\begin{definition}{Orientation}{orientation}
+	Let $V$ be a vector space of finite dimension.
+	Let us define an equivalence relation $\sim$ between bases of $V$: two bases $\mathcal A$ and
+	$\mathcal B$ are equivalent if the change of basis matrix $P$ between the two has $\det(P) > 0$.
+
+	Each equivalence class of $\sim$ is called orientation.
+\end{definition}
+
+\begin{proposition}{}{}
+	$\sim$ is an equivalence relation. Moreover, there are exactly 2 equivalence classes.
+\end{proposition}
+
+\begin{proof}
+	$\sim$ is reflective since if $\mathcal A = \mathcal B$ we have that $P = \mathds 1$ which has
+	positive determinant.
+
+	Inverting the roles of the two bases yields $P^{-1}$ instead, which still has the same sign of the
+	determinant, therefore $\sim$ is also symmetric.
+
+	Consider three bases $\mathcal A, \mathcal B, \mathcal C$ so that $P$ goes from $\mathcal A$ to
+	$\mathcal B$ and $Q$ goes from $\mathcal B$ to $\mathcal C$. The change of basis from $\mathcal A$
+	to $\mathcal C$ is given by $PQ$.
+	If $\det (P), \det (Q) > 0$ then also $\det(PQ) = \det(P) \det(Q) > 0$ and we have transitivity.
+
+	Let $\mathcal B = \{ v_1, \dots, v_n\}$ and consider $\mathcal B' = \{-v_1, v_2, \dots, v_k\}$,
+	then $\det(P) < 0$ therefore we have at least two equivalent classes.
+
+	TODO: prove that there are at most 2
+\end{proof}
+
 
 \end{document}
